# Mu-Linux-0.97k

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.editor.yml  docker-compose.images.yml  docker-compose.yml
Client/: Config.ini
Client/Data/: Gate.bmd
Encoder/: CustomGlow.txt  CustomMonster.txt  MainInfo.ini
MuServer/Data/: Command.txt  MapManager.txt  Message_Eng.txt  Message_Por.txt  (+1 more)
Pterodactyl eggs/: egg-mu-97k-server.json  egg-mu-97k-web.json
Source/MuServer/: CMakeLists.txt
Source/MuServer/Common/: Platform.h
Source/MuServer/ConnectServer/: ConnectServerLinux.cpp  CriticalSection.h  Log.h  Queue.cpp  ServerDisplayer.cpp  ServerDisplayer.h  ServerList.cpp  ServerList.h  SocketManager.h  SocketManagerLinux.cpp  SocketManagerUdpLinux.cpp  Util.cpp  Util.h  stdafx.h
Source/MuServer/DataServer/: BadSyntax.cpp  BadSyntax.h  Console.cpp  DataServerLinux.cpp  Log.h  MiniDump.cpp  QueryManager.h  ReadScript.h  ServerDisplayer.cpp  SocketManager.h  SocketManagerLinux.cpp  Util.cpp  Util.h  stdafx.h
Source/MuServer/GameServer/: BattleGround.cpp  BattleGround.h  BattleSoccerManager.cpp  BattleSoccerManager.h  Blacklist.cpp  Blacklist.h  BloodCastle.cpp  BloodCastle.h  BonusManager.cpp  BonusManager.h  CommandManager.cpp  CommandManager.h  Connection.cpp  Connection.h  ConnectionLinux.cpp  Console.cpp  CriticalSection.cpp  CustomNpcMove.cpp  CustomNpcMove.h  CustomPkFree.cpp  CustomPkFree.h  CustomSafeZone.cpp  CustomSafeZone.h  CustomWing.cpp  CustomWing.h  DefaultClassInfo.cpp  DefaultClassInfo.h  DevilSquare.cpp  DevilSquare.h  EffectManager.cpp  EffectManager.h  EventSpawnMonster.cpp  EventSpawnMonster.h  ExperienceTable.cpp  ExperienceTable.h  Filter.cpp  Filter.h  GameMaster.cpp  GameMaster.h  GameServer.cpp  (+88 more)
Source/MuServer/JoinServer/: AllowableIpList.cpp  AllowableIpList.h  Console.h  JoinServerLinux.cpp  Log.cpp  Log.h  MD5.cpp  MD5.h  QueryManager.cpp  Queue.h  ServerDisplayer.cpp  SocketManager.h  SocketManagerLinux.cpp  SocketManagerUdpLinux.cpp  Util.cpp  Util.h  stdafx.h
docker/: entrypoint.sh
editor/: Dockerfile  package.json  server.js
web/: Dockerfile  package.json  server.js
(+129 files in other folders)
